[tool.poetry]
name = "excel-into-interactive-dashboard"
version = "0.1.0"
description = ""
authors = ["Afonso Caboz <afonso.caboz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.24"
taipy = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
